vox/rust/roam-macros-parse/tests/tests/fixtures/snapshots/parser__with_docs.snap
---
source: rust/roam-macros-parse/tests/parser.rs
description: "/// A simple echo service that echoes messages back.\ntrait Echo {\n    /// Echoes the message back to the caller.\n    async fn echo(&self, message: String) -> String;\n}\n"
---
ServiceTrait {
    attributes: DelimitedVec<roam_macros_parse::RawAttribute, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 18446744073709551615>(
        [
            Delimited<roam_macros_parse::RawAttribute, unsynn::fundamental::Nothing> {
                value: RawAttribute {
                    _pound: Operator<'#'>,
                    body: BracketGroupContaining < proc_macro2::TokenStream>(
                        TokenStream [
                            Ident {
                                sym: doc,
                                span: bytes(1..53),
                            },
                            Punct {
                                char: '=',
                                spacing: Alone,
                                span: bytes(1..53),
                            },
                            Literal {
                                lit: " A simple echo service that echoes messages back.",
                                span: bytes(1..53),
                            },
                        ],
                    ),
                },
                delimiter: Some(
                    Nothing,
                ),
            },
        ],
    ),
    vis: DelimitedVec<roam_macros_parse::Visibility, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 1>(
        [],
    ),
    _trait: KTrait(
        Cached<proc_macro2::Ident> {
            value: Ident {
                sym: trait,
                span: bytes(54..59),
            },
            string: "trait",
        },
    ),
    name: Ident {
        sym: Echo,
        span: bytes(60..64),
    },
    generics: DelimitedVec<roam_macros_parse::GenericParams, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 1>(
        [],
    ),
    body: BraceGroupContaining < unsynn::container::DelimitedVec<roam_macros_parse::ServiceMethod, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, usize::MAX>>(
        DelimitedVec<roam_macros_parse::ServiceMethod, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 18446744073709551615>(
            [
                Delimited<roam_macros_parse::ServiceMethod, unsynn::fundamental::Nothing> {
                    value: ServiceMethod {
                        attributes: DelimitedVec<roam_macros_parse::RawAttribute, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 18446744073709551615>(
                            [
                                Delimited<roam_macros_parse::RawAttribute, unsynn::fundamental::Nothing> {
                                    value: RawAttribute {
                                        _pound: Operator<'#'>,
                                        body: BracketGroupContaining < proc_macro2::TokenStream>(
                                            TokenStream [
                                                Ident {
                                                    sym: doc,
                                                    span: bytes(71..113),
                                                },
                                                Punct {
                                                    char: '=',
                                                    spacing: Alone,
                                                    span: bytes(71..113),
                                                },
                                                Literal {
                                                    lit: " Echoes the message back to the caller.",
                                                    span: bytes(71..113),
                                                },
                                            ],
                                        ),
                                    },
                                    delimiter: Some(
                                        Nothing,
                                    ),
                                },
                            ],
                        ),
                        _async: KAsync(
                            Cached<proc_macro2::Ident> {
                                value: Ident {
                                    sym: async,
                                    span: bytes(118..123),
                                },
                                string: "async",
                            },
                        ),
                        _fn: KFn(
                            Cached<proc_macro2::Ident> {
                                value: Ident {
                                    sym: fn,
                                    span: bytes(124..126),
                                },
                                string: "fn",
                            },
                        ),
                        name: Ident {
                            sym: echo,
                            span: bytes(127..131),
                        },
                        generics: DelimitedVec<roam_macros_parse::GenericParams, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 1>(
                            [],
                        ),
                        params: ParenthesisGroupContaining < roam_macros_parse::MethodParams>(
                            MethodParams {
                                receiver: RefSelf {
                                    _amp: Operator<'&'>,
                                    mutability: None,
                                    name: KSelfKw(
                                        Cached<proc_macro2::Ident> {
                                            value: Ident {
                                                sym: self,
                                                span: bytes(133..137),
                                            },
                                            string: "self",
                                        },
                                    ),
                                },
                                rest: DelimitedVec<unsynn::combinator::Cons<unsynn::operator::Operator<','>, unsynn::container::DelimitedVec<roam_macros_parse::MethodParam, unsynn::operator::Operator<','>, unsynn::container::TrailingDelimiter::Optional, 0, usize::MAX>>, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 1>(
                                    [
                                        Delimited<unsynn::combinator::Cons<unsynn::operator::Operator<','>, unsynn::container::DelimitedVec<roam_macros_parse::MethodParam, unsynn::operator::Operator<','>, unsynn::container::TrailingDelimiter::Optional, 0, usize::MAX>>, unsynn::fundamental::Nothing> {
                                            value: Cons<unsynn::operator::Operator<','>, unsynn::container::DelimitedVec<roam_macros_parse::MethodParam, unsynn::operator::Operator<','>, unsynn::container::TrailingDelimiter::Optional, 0, usize::MAX>> {
                                                first: Operator<','>,
                                                second: DelimitedVec<roam_macros_parse::MethodParam, unsynn::operator::Operator<','>, unsynn::container::TrailingDelimiter::Optional, 0, 18446744073709551615>(
                                                    [
                                                        Delimited<roam_macros_parse::MethodParam, unsynn::operator::Operator<','>> {
                                                            value: MethodParam {
                                                                name: Ident {
                                                                    sym: message,
                                                                    span: bytes(139..146),
                                                                },
                                                                _colon: Operator<':'>,
                                                                ty: Path(
                                                                    TypePath {
                                                                        leading: None,
                                                                        first: Ident {
                                                                            sym: String,
                                                                            span: bytes(148..154),
                                                                        },
                                                                        rest: DelimitedVec<unsynn::combinator::Cons<unsynn::operator::Operator<':', ':'>, proc_macro2::Ident>, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 18446744073709551615>(
                                                                            [],
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                            delimiter: None,
                                                        },
                                                    ],
                                                ),
                                            },
                                            delimiter: Some(
                                                Nothing,
                                            ),
                                        },
                                    ],
                                ),
                            },
                        ),
                        return_type: DelimitedVec<roam_macros_parse::ReturnType, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 1>(
                            [
                                Delimited<roam_macros_parse::ReturnType, unsynn::fundamental::Nothing> {
                                    value: ReturnType {
                                        _arrow: Operator<'->'>,
                                        ty: Path(
                                            TypePath {
                                                leading: None,
                                                first: Ident {
                                                    sym: String,
                                                    span: bytes(159..165),
                                                },
                                                rest: DelimitedVec<unsynn::combinator::Cons<unsynn::operator::Operator<':', ':'>, proc_macro2::Ident>, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 18446744073709551615>(
                                                    [],
                                                ),
                                            },
                                        ),
                                    },
                                    delimiter: Some(
                                        Nothing,
                                    ),
                                },
                            ],
                        ),
                        where_clause: DelimitedVec<roam_macros_parse::WhereClause, unsynn::fundamental::Nothing, unsynn::container::TrailingDelimiter::Optional, 0, 1>(
                            [],
                        ),
                        _semi: Operator<';'>,
                    },
                    delimiter: Some(
                        Nothing,
                    ),
                },
            ],
        ),
    ),
    _eos: EndOfStream,
}
